[project]
name = "stormsw-github-io"
version = "0.1.0"
description = "Github Pages for stormsw"
readme = "README.md"
authors = [
    { name = "Alexander Varchenko", email = "alexander.varchenko@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ghp-import>=2.1.0",
    "markdown>=3.9",
    "pelican>=4.11.0",
]
